--- a/PS3HEN/payload/Makefile
+++ b/PS3HEN/payload/Makefile
@@ -20,6 +20,9 @@ all:
 	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_489C_release --no-print-directory
 	
+	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
+	@make -f Makefile_490C_release --no-print-directory
+	
 	@rm -f *.o *.elf *.bin *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_484C_debug --no-print-directory
 	
@@ -37,6 +40,9 @@ all:
 	
 	@rm -f *.o *.elf *.bin *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_489C_debug --no-print-directory
+	
+	@rm -f *.o *.elf *.bin *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
+	@make -f Makefile_490C_debug --no-print-directory
 
 release:
 	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
@@ -57,6 +63,9 @@ release:
 	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_489C_release --no-print-directory
 
+	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
+	@make -f Makefile_490C_release --no-print-directory
+	
 debug:	
 	@rm -f *.o *.elf *.bin *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_484D_debug --no-print-directory
@@ -78,6 +87,9 @@ debug:
 
 	@rm -f *.o *.elf *.bin *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_489C_debug --no-print-directory
+	
+	@rm -f *.o *.elf *.bin *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
+	@make -f Makefile_490C_debug --no-print-directory
 
 debug_484:
 	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
