--- a/PS3HEN/payload/Makefile
+++ b/PS3HEN/payload/Makefile
@@ -21,7 +21,7 @@ all:
 	@make -f Makefile_489C_release --no-print-directory
 
 	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
-	@make -f Makefile_484D_debug --no-print-directory
+	@make -f Makefile_490C_release --no-print-directory
 	
 	@rm -f *.o *.elf *.bin *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_484C_debug --no-print-directory
@@ -45,9 +45,6 @@ all:
 	@make -f Makefile_490C_debug --no-print-directory
 
 release:
-	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
-	@make -f Makefile_484D_release --no-print-directory  
-	
 	@rm -f *.o *.elf *.bin *.release *.debug *.cex *.dex *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 	@make -f Makefile_484C_release --no-print-directory
     
